# kkbox-churn-prediction

./: --  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Analysis Queries.docx  CITES.md  CI_ANALYSIS.md  CLAUDE.md  CODEBASE_ANALYSIS.md  DOCKER_README.md  Dockerfile  FAST_PATH.md  Final SQL consol output.txt  HANDOFF.md  HANDOFF_COMPREHENSIVE_FEATURES.md  LEARNERS_GUIDE.md  LEARN_THIS_PROJECT.md  LICENSE  MODEL_CARD.md  Makefile  README.md  README.txt  README_SQL.txt  REAL_DATA_COMMANDS.md  REAL_DATA_INSTRUCTIONS.md  RELEASE_CHECKLIST.md  RUN_IN_WSL.md  Run SQL Scripts.txt  STATUS_FINAL.md  analyze_appx.ps1  docker-compose.yml  docker-start.sh  features.yaml  get_framework_packages.ps1  get_package_sizes.ps1  get_windowsapps_sizes.ps1  leak_audit.md  master.sql  mkdocs.yml  (+11 more)
.claude/: settings.json  settings.local.json
Resume_Assets/: brief.txt
api/: .dockerignore  Dockerfile  README.md  __init__.py  config.py  main.py  requirements.txt
app/: streamlit_app.py
brutalist-aesthetic-kkbox-churn-analysis-pro/: App.tsx  IMPLEMENTATION_PLAN.md  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts
docs/: index.md
eval/: app_features.csv  backtests.csv  baseline_metrics.json  calibration_metrics.json  dataset_summary.json  xgb_metrics.json
features/: features.sqlx  features_comprehensive.sql  features_simple.sql
gemini-app/: .dockerignore  App.tsx  Dockerfile  README.md  index.css  index.html  metadata.json  package-lock.json  package.json  tailwind.config.js  types.ts  vite.config.ts
models/: best_hyperparameters.json  calibration_metrics.json  calibrator_dummy_most_frequent.pkl  calibrator_dummy_stratified.pkl  calibrator_isotonic.npz  calibrator_logistic_regression.pkl  calibrator_random_forest.pkl  calibrator_xgboost.pkl  dummy_most_frequent.pkl  dummy_stratified.pkl  feature_encoders.pkl  lgb.txt  logistic_regression.pkl  random_forest.pkl  scaler.pkl  stacked_ensemble_metrics.json  xgb.json  (+3 more)
(+108 files in other folders)
